# oop-mine-game

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  OopMineGame_Final_Report 1.pptx  README.md  test
.github/workflows/: cmake-multi-platform.yml
OopMineGame/: .gitignore  CMakeLists.txt  OopMineGame.slnx  OopMineGame.vcxproj  OopMineGame.vcxproj.filters  create_assets_zip.bat  create_assets_zip.sh
OopMineGame/libs/: olcAabb.h
OopMineGame/src/: Block.cpp  Block.h  Blocks.cpp  Blocks.h  Entity.cpp  Entity.h  Item.cpp  Item.h  ItemStack.cpp  ItemStack.h  Items.cpp  Items.h  OopMineGame.cpp  OopMineGame.h  Player.cpp  Player.h  Sheep.cpp  Sheep.h  Transform.cpp  Transform.h  Utils.h  Verify.h  World.cpp  World.h  main.cpp
OopMineGame/src/gui/: Anchor.cpp  Anchor.h  Button.cpp  Button.h  Container.cpp  Container.h  Debugger.cpp  Debugger.h  Direction.cpp  Direction.h  Events.h  FlowContainer.cpp  FlowContainer.h  Gui.h  Hotbar.cpp  Hotbar.h  Slider.cpp  Slider.h  Slot.cpp  Slot.h  TextContainer.cpp  TextContainer.h  WorldSetting.cpp  WorldSetting.h
assets/block/: oak_leaves.af
assets/entity/player/: player.af
docs/: flowchart.mmd  uml.mmd
libs/: olcAabb.h  olcPixelGameEngine.h
src/: Bindable.h  Block.cpp  Block.h  Blocks.cpp  Blocks.h  Data.cpp  Data.h  DroppedItem.cpp  DroppedItem.h  Entity.cpp  Entity.h  Item.cpp  Item.h  ItemStack.cpp  ItemStack.h  Items.cpp  Items.h  Mob.cpp  Mob.h  OopMineGame.cpp  OopMineGame.h  Particle.h  Player.cpp  Player.h  Recipes.cpp  Recipes.h  Sheep.cpp  Sheep.h  Transform.cpp  Transform.h  Utils.h  Verify.h  World.cpp  World.h  main.cpp
src/gui/: Anchor.cpp  Anchor.h  Button.cpp  Button.h  Container.cpp  Container.h  CraftingTable.cpp  CraftingTable.h  Debugger.cpp  Debugger.h  Direction.cpp  Direction.h  Events.h  FlowContainer.cpp  FlowContainer.h  Gui.h  Hotbar.cpp  Hotbar.h  Slider.cpp  Slider.h  Slot.cpp  Slot.h  TextContainer.cpp  TextContainer.h  WorldSetting.cpp  WorldSetting.h
src/test/: BindableTest.cpp
